wav and spect cropping

--- a/Crop_wav.ipynb
+++ b/Crop_wav.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,9 @@
     "import librosa\n",
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
-    "import ipywidgets as widgets"
+    "import ipywidgets as widgets\n",
+    "import soundfile as sf\n",
+    "import imagesc"
    ]
   },
   {
@@ -41,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c978d49368ae4ccba472c84801ddb2e8",
+       "model_id": "ff7fae2f71174d63b43b5202c6174913",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +115,7 @@
        "'/Users/saroltagabulya/git/Orca/time_stamps_2017-02-04--10-14-06--00-16-35--BC.csv'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +151,7 @@
        "(21939970,)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,144 +161,297 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>onset</th>\n",
-       "      <th>offset</th>\n",
-       "      <th>filename</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>841.922751</td>\n",
-       "      <td>845.761460</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>851.574364</td>\n",
-       "      <td>851.355009</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>856.290493</td>\n",
-       "      <td>859.580815</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>869.940404</td>\n",
-       "      <td>872.901695</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>879.153308</td>\n",
-       "      <td>881.785566</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>926.025410</td>\n",
-       "      <td>930.302829</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>945.547990</td>\n",
-       "      <td>947.302829</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>951.969153</td>\n",
-       "      <td>956.685282</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>970.524559</td>\n",
-       "      <td>976.227785</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>399.434236</td>\n",
-       "      <td>404.150365</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>409.853591</td>\n",
-       "      <td>415.447140</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>516.579681</td>\n",
-       "      <td>519.211939</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         onset      offset                                           filename\n",
-       "0   841.922751  845.761460  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "1   851.574364  851.355009  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "2   856.290493  859.580815  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "3   869.940404  872.901695  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "4   879.153308  881.785566  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "5   926.025410  930.302829  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "6   945.547990  947.302829  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "7   951.969153  956.685282  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "8   970.524559  976.227785  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "9   399.434236  404.150365  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "10  409.853591  415.447140  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "11  516.579681  519.211939  /Users/saroltagabulya/git/Orca/2017-02-04--10-..."
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "time_stamps"
+    "### Onsets & offsets in csv are in seconds => Convert to samples by multiplying them with the fs\n",
+    "\n",
+    "second * fs = samples\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "time_stamps['onset_samples']=time_stamps.onset.apply(lambda x: int(round(x*sr)))\n",
+    "time_stamps['offset_samples']=time_stamps.offset.apply(lambda x: int(round(x*sr)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function for cropping wav and saving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-74-1d3c1e868ee4>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-74-1d3c1e868ee4>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    os.mkdir('./wav_segments/' + filename)\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename='2017-02-04--10-14-06--00-16-35--BC'\n",
+    "os.mkdir('./call_segments/' + filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crop_call(row, y, sr, filename):\n",
+    "    call_filename= filename + '_' + str(row.onset_samples) + '_' + str(row.offset_samples) + '.wav'\n",
+    "    call=y[row.onset_samples: row.offset_samples]\n",
+    "    call_path='./call_segments/' + filename +'/' +  call_filename\n",
+    "    sf.write(call_path, call, sr) \n",
+    "    return call_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_stamps['call_wav']=time_stamps.apply(lambda x: crop_call(x, y, sr, filename), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function for converting wavs into spectrograms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def open_wav(row):\n",
+    "    y, sr = librosa.load(row.call_wav)\n",
+    "    return y, sr, row.call_wav"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wav_to_spect(y, sr, call_wav):\n",
+    "    \n",
+    "    if len(y)>0:\n",
+    "        # Convert to spectogram \n",
+    "        Y = librosa.stft(y)\n",
+    "        Ydb = librosa.amplitude_to_db(abs(Y))\n",
+    "\n",
+    "        plt.imshow(Ydb, aspect=0.3, origin='lower')\n",
+    "        plt.xlabel('time(samples)')\n",
+    "        plt.ylabel('Hz')\n",
+    "\n",
+    "        # Save spectograms\n",
+    "        plt.savefig(call_wav[:-3] + 'png')\n",
+    "        plt.close()\n",
+    "    \n",
+    "        return Ydb\n",
+    "    \n",
+    "    else: \n",
+    "        return 'Error with wav'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4777ef4e788e48e1b2b19cd9fd410a6a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c499341331e34d44927d497e2def8dbb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "20030a92071b4a4c95a94af2fbd87571",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0268186966e48b1b359c7644082a5bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21ac944949d64dd998eb74fe87fe326b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a7ecc89ead34db8bb59e8c373190b6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3830b8df6921436eb40cbf35f1d9ee9c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df19298a49624c2289861e1a15b66847",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "626fe54a0d5c4164898868b98eb8e04b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8c34b099e4d34cfda122c3bc270760b1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1b88b7431f147f984288360fc97797c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "time_stamps['spect']=time_stamps.apply(lambda x: wav_to_spect(*open_wav(x)), axis=1) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save csv under new name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_stamps.to_csv('call_data_' + filename)"
+   ]
   }
  ],
  "metadata": {
