--- a/Interactive_plot.ipynb
+++ b/Interactive_plot.ipynb
@@ -41,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ef8f4a1e115494ab4248f24fa667505",
+       "model_id": "c096d10514b84df5afa36c612094f8bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2017-02-04--10-14-06--00-16-35--BC.wav\n"
+      "whale_cropped_test.wav\n"
      ]
     }
    ],
@@ -94,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of data points: 21939970, fs: 22050 Hz, resulting file length: 16.58349962207105 min.\n"
+      "Number of data points: 1166478, fs: 22050 Hz, resulting file length: 0.8816916099773242 min.\n"
      ]
     }
    ],
@@ -121,13 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45bc1cb2924c4802a8fb96f71bace1c0",
+       "model_id": "9438d869d220428f9e512b92c0497335",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a386181ca92745c2a3a4009252c7c2c3",
+       "model_id": "f7bcb60b01f640e0933f4ca10b799b8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,10 +215,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x135b9aac0>"
+       "<matplotlib.colorbar.Colorbar at 0x1344562e0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,13 +307,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da5be017b2f6470ca3ecd65f9fbe7ec6",
+       "model_id": "0c729669cec7455b97d1ed2fb9ad4241",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,10 +327,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x131527940>"
+       "<matplotlib.colorbar.Colorbar at 0x1344ee370>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,94 +379,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>841.922751</td>\n",
-       "      <td>845.761460</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
+       "      <td>12.761527</td>\n",
+       "      <td>15.393785</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/whale_cropped_t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>851.574364</td>\n",
-       "      <td>851.355009</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>856.290493</td>\n",
-       "      <td>859.580815</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>869.940404</td>\n",
-       "      <td>872.901695</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>879.153308</td>\n",
-       "      <td>881.785566</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>926.025410</td>\n",
-       "      <td>930.302829</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>945.547990</td>\n",
-       "      <td>947.302829</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>951.969153</td>\n",
-       "      <td>956.685282</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>970.524559</td>\n",
-       "      <td>976.227785</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>399.434236</td>\n",
-       "      <td>404.150365</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>409.853591</td>\n",
-       "      <td>415.447140</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>516.579681</td>\n",
-       "      <td>519.211939</td>\n",
-       "      <td>/Users/saroltagabulya/git/Orca/2017-02-04--10-...</td>\n",
+       "      <td>39.193785</td>\n",
+       "      <td>44.019592</td>\n",
+       "      <td>/Users/saroltagabulya/git/Orca/whale_cropped_t...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         onset      offset                                           filename\n",
-       "0   841.922751  845.761460  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "1   851.574364  851.355009  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "2   856.290493  859.580815  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "3   869.940404  872.901695  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "4   879.153308  881.785566  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "5   926.025410  930.302829  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "6   945.547990  947.302829  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "7   951.969153  956.685282  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "8   970.524559  976.227785  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "9   399.434236  404.150365  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "10  409.853591  415.447140  /Users/saroltagabulya/git/Orca/2017-02-04--10-...\n",
-       "11  516.579681  519.211939  /Users/saroltagabulya/git/Orca/2017-02-04--10-..."
+       "       onset     offset                                           filename\n",
+       "0  12.761527  15.393785  /Users/saroltagabulya/git/Orca/whale_cropped_t...\n",
+       "1  39.193785  44.019592  /Users/saroltagabulya/git/Orca/whale_cropped_t..."
       ]
      },
      "execution_count": 19,
@@ -477,6 +407,20 @@
    "source": [
     "time_stamps"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
