cleaned up notebook

--- a/Crop_wav.ipynb
+++ b/Crop_wav.ipynb
@@ -9,16 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +21,7 @@
     "import librosa.display\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
-    "import soundfile as sf\n",
-    "import imagesc"
+    "import soundfile as sf"
    ]
   },
   {
@@ -43,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff7fae2f71174d63b43b5202c6174913",
+       "model_id": "ff5849be57b44d1e8601c899cd661cc7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,32 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "filename = directory + file[0]\n",
-    "time_stamps=pd.read_csv(filename, index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/saroltagabulya/git/Orca/time_stamps_2017-02-04--10-14-06--00-16-35--BC.csv'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filename"
+    "time_stamps=pd.read_csv(filename, index_col=0)\n",
+    "\n",
+    "# Also extract recording name for later use\n",
+    "recording_name=file[0][12:-4]"
    ]
   },
   {
@@ -133,31 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y, sr = librosa.load(time_stamps.filename.unique()[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(21939970,)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.shape(y)"
+    "y, sr = librosa.load(recording_name + '.wav')"
    ]
   },
   {
@@ -171,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,44 +141,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-74-1d3c1e868ee4>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-74-1d3c1e868ee4>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    os.mkdir('./wav_segments/' + filename)\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 17] File exists: './call_segments/2017-02-04--10-14-06--00-16-35--BC'\n"
      ]
     }
    ],
    "source": [
-    "filename='2017-02-04--10-14-06--00-16-35--BC'\n",
-    "os.mkdir('./call_segments/' + filename)"
+    "try:\n",
+    "    os.mkdir('./call_segments/' + recording_name)\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def crop_call(row, y, sr, filename):\n",
-    "    call_filename= filename + '_' + str(row.onset_samples) + '_' + str(row.offset_samples) + '.wav'\n",
+    "def crop_call(row, y, sr, recording_name):\n",
+    "    call_filename= recording_name + '_' + str(row.onset_samples) + '_' + str(row.offset_samples) + '.wav'\n",
     "    call=y[row.onset_samples: row.offset_samples]\n",
-    "    call_path='./call_segments/' + filename +'/' +  call_filename\n",
+    "    call_path='./call_segments/' + recording_name +'/' +  call_filename\n",
     "    sf.write(call_path, call, sr) \n",
     "    return call_path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_stamps['call_wav']=time_stamps.apply(lambda x: crop_call(x, y, sr, filename), axis=1)"
+    "time_stamps['call_wav']=time_stamps.apply(lambda x: crop_call(x, y, sr, recording_name), axis=1)"
    ]
   },
   {
@@ -237,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,164 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4777ef4e788e48e1b2b19cd9fd410a6a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c499341331e34d44927d497e2def8dbb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20030a92071b4a4c95a94af2fbd87571",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0268186966e48b1b359c7644082a5bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21ac944949d64dd998eb74fe87fe326b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a7ecc89ead34db8bb59e8c373190b6e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3830b8df6921436eb40cbf35f1d9ee9c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df19298a49624c2289861e1a15b66847",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "626fe54a0d5c4164898868b98eb8e04b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c34b099e4d34cfda122c3bc270760b1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1b88b7431f147f984288360fc97797c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "time_stamps['spect']=time_stamps.apply(lambda x: wav_to_spect(*open_wav(x)), axis=1) "
    ]
@@ -446,11 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_stamps.to_csv('call_data_' + filename)"
+    "time_stamps.to_csv('call_data_' + recording_name + '.csv')"
    ]
   }
  ],
